fixed ribbon z-index

--- a/packages/frontend/app/styles/components/ribbon.scss
+++ b/packages/frontend/app/styles/components/ribbon.scss
@@ -8,6 +8,7 @@
   padding: 0.5em 0.5em 0.25em;
   position: fixed;
   text-transform: uppercase;
+  z-index: 1;
 }
 
 @media (min-width: 768px) {
